asgn3/y.output
Terminals unused in grammar

   SIMPLE_ESC_SEQ
   WHERE


State 275 conflicts: 1 reduce/reduce
State 650 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: compilation_unit

    2 identifier: ID

    3 literal: boolean_literal
    4        | integer_literal
    5        | character_literal
    6        | string_literal
    7        | null_literal

    8 boolean_literal: TRUE
    9                | FALSE

   10 integer_literal: DINT_LITERAL
   11                | HDINT_LITERAL

   12 character_literal: CHAR_LITERAL

   13 string_literal: REG_STR_LITERAL
   14               | VER_STR_LITERAL

   15 null_literal: NULL_LIT

   16 right_shift: RSHIFT

   17 right_shift_assignment: RSHIFTEQ

   18 namespace_name: namespace_or_type_name

   19 type_name: namespace_or_type_name

   20 namespace_or_type_name: qualified_identifier
   21                       | qualified_alias_member

   22 type: non_array_type
   23     | array_type

   24 non_array_type: type_name
   25               | simple_type
   26               | nullable_type

   27 simple_type: numeric_type
   28            | class_type
   29            | BOOL

   30 numeric_type: integral_type

   31 integral_type: INT
   32              | UINT
   33              | LONG
   34              | ULONG
   35              | CHAR

   36 nullable_type: non_nullable_value_type '?'

   37 non_nullable_value_type: simple_type

   38 class_type: OBJECT
   39           | STRING

   40 variable_reference: expression

   41 argument_list: argument
   42              | argument_list ',' argument

   43 argument: argument_value
   44         | argument_name argument_value

   45 argument_name: identifier ':'

   46 argument_value: expression
   47               | REF variable_reference

   48 primary_expression: primary_no_array_creation_expression
   49                   | array_creation_expression

   50 primary_no_array_creation_expression: literal
   51                                     | parenthesized_expression
   52                                     | member_access
   53                                     | invocation_expression
   54                                     | element_access
   55                                     | this_access
   56                                     | base_access
   57                                     | object_creation_expression
   58                                     | typeof_expression
   59                                     | default_value_expression

   60 parenthesized_expression: '(' expression ')'

   61 $@1: %empty

   62 member_access: primary_expression '.' identifier $@1
   63              | predefined_type '.' identifier
   64              | qualified_alias_member '.' identifier

   65 predefined_type: BOOL
   66                | CHAR
   67                | INT
   68                | LONG
   69                | OBJECT
   70                | STRING
   71                | UINT
   72                | ULONG

   73 invocation_expression: primary_expression '(' ')'
   74                      | primary_expression '(' argument_list ')'
   75                      | qualified_identifier '(' ')'
   76                      | qualified_identifier '(' argument_list ')'

   77 element_access: primary_no_array_creation_expression '[' expression_list ']'

   78 expression_list: expression
   79                | expression_list ',' expression

   80 this_access: THIS

   81 base_access: BASE '.' identifier
   82            | BASE '[' expression_list ']'

   83 postfix_expression: primary_expression
   84                   | qualified_identifier
   85                   | post_increment_expression
   86                   | post_decrement_expression

   87 post_increment_expression: postfix_expression INCR

   88 post_decrement_expression: postfix_expression DECR

   89 object_creation_expression: NEW type '(' ')'
   90                           | NEW type '(' argument_list ')'
   91                           | NEW type '(' ')' object_or_collection_initializer
   92                           | NEW type '(' argument_list ')' object_or_collection_initializer

   93 object_or_collection_initializer: object_initializer
   94                                 | collection_initializer

   95 object_initializer: '{' '}'
   96                   | '{' member_initializer_list '}'
   97                   | '{' member_initializer_list ',' '}'

   98 member_initializer_list: member_initializer
   99                        | member_initializer_list ',' member_initializer

  100 member_initializer: identifier '=' initializer_value

  101 initializer_value: expression
  102                  | object_or_collection_initializer

  103 collection_initializer: '{' element_initializer_list '}'
  104                       | '{' element_initializer_list ',' '}'

  105 element_initializer_list: element_initializer
  106                         | element_initializer_list ',' element_initializer

  107 element_initializer: non_assignment_expression
  108                    | '{' expression_list '}'

  109 array_creation_expression: NEW non_array_type '[' expression_list ']'
  110                          | NEW non_array_type '[' expression_list ']' rank_specifier
  111                          | NEW non_array_type '[' expression_list ']' array_initializer
  112                          | NEW non_array_type '[' expression_list ']' rank_specifier array_initializer
  113                          | NEW array_type array_initializer
  114                          | NEW rank_specifier array_initializer

  115 typeof_expression: TYPEOF '(' type ')'
  116                  | TYPEOF '(' VOID ')'

  117 default_value_expression: DEFAULT '(' type ')'

  118 unary_expression: postfix_expression
  119                 | '+' unary_expression
  120                 | '-' unary_expression
  121                 | '!' unary_expression
  122                 | '~' unary_expression
  123                 | pre_increment_expression
  124                 | pre_decrement_expression
  125                 | cast_expression

  126 pre_increment_expression: INCR unary_expression

  127 pre_decrement_expression: DECR unary_expression

  128 cast_expression: '(' type ')' unary_expression

  129 multiplicative_expression: unary_expression
  130                          | multiplicative_expression '*' unary_expression
  131                          | multiplicative_expression '/' unary_expression
  132                          | multiplicative_expression '%' unary_expression

  133 additive_expression: multiplicative_expression
  134                    | additive_expression '+' multiplicative_expression
  135                    | additive_expression '-' multiplicative_expression

  136 shift_expression: additive_expression
  137                 | shift_expression LSHIFT additive_expression
  138                 | shift_expression right_shift additive_expression

  139 relational_expression: shift_expression
  140                      | relational_expression '<' shift_expression
  141                      | relational_expression '>' shift_expression
  142                      | relational_expression LE shift_expression
  143                      | relational_expression GE shift_expression

  144 equality_expression: relational_expression
  145                    | equality_expression REQ relational_expression
  146                    | equality_expression RNE relational_expression

  147 and_expression: equality_expression
  148               | and_expression '&' equality_expression

  149 exclusive_or_expression: and_expression
  150                        | exclusive_or_expression '^' and_expression

  151 inclusive_or_expression: exclusive_or_expression
  152                        | inclusive_or_expression '|' exclusive_or_expression

  153 conditional_and_expression: inclusive_or_expression
  154                           | conditional_and_expression RAND inclusive_or_expression

  155 conditional_or_expression: conditional_and_expression
  156                          | conditional_or_expression ROR conditional_and_expression

  157 null_coalescing_expression: conditional_or_expression
  158                           | conditional_or_expression DQM null_coalescing_expression

  159 conditional_expression: null_coalescing_expression
  160                       | null_coalescing_expression '?' expression ':' expression

  161 assignment: unary_expression assignment_operator expression

  162 assignment_operator: '='
  163                    | APLUS
  164                    | AMINUS
  165                    | AMULT
  166                    | ADIV
  167                    | AMOD
  168                    | AAND
  169                    | AOR
  170                    | ACARET
  171                    | LSHIFTEQ
  172                    | right_shift_assignment

  173 expression: non_assignment_expression
  174           | assignment

  175 non_assignment_expression: conditional_expression

  176 constant_expression: expression

  177 boolean_expression: expression

  178 statement: labeled_statement
  179          | declaration_statement
  180          | embedded_statement

  181 embedded_statement: block
  182                   | empty_statement
  183                   | expression_statement
  184                   | selection_statement
  185                   | iteration_statement
  186                   | jump_statement
  187                   | try_statement
  188                   | using_statement

  189 block: '{' '}'
  190      | '{' statement_list '}'

  191 statement_list: statement
  192               | statement_list statement

  193 empty_statement: ';'

  194 labeled_statement: identifier ':' statement

  195 declaration_statement: local_variable_declaration ';'
  196                      | local_constant_declaration ';'

  197 local_variable_declaration: local_variable_type local_variable_declarators

  198 local_variable_type: type

  199 local_variable_declarators: local_variable_declarator
  200                           | local_variable_declarators ',' local_variable_declarator

  201 local_variable_declarator: identifier
  202                          | identifier '=' local_variable_initializer

  203 local_variable_initializer: expression
  204                           | array_initializer

  205 local_constant_declaration: CONST type constant_declarators

  206 expression_statement: statement_expression ';'

  207 statement_expression: invocation_expression
  208                     | object_creation_expression
  209                     | assignment
  210                     | post_increment_expression
  211                     | post_decrement_expression
  212                     | pre_increment_expression
  213                     | pre_decrement_expression

  214 selection_statement: if_statement
  215                    | switch_statement

  216 if_statement: IF '(' boolean_expression ')' embedded_statement
  217             | IF '(' boolean_expression ')' embedded_statement ELSE embedded_statement

  218 switch_statement: SWITCH '(' expression ')' switch_block

  219 switch_block: '{' '}'
  220             | '{' switch_sections '}'

  221 switch_sections: switch_section
  222                | switch_sections switch_section

  223 switch_section: switch_labels statement_list

  224 switch_labels: switch_label
  225              | switch_labels switch_label

  226 switch_label: CASE constant_expression ':'
  227             | DEFAULT ':'

  228 iteration_statement: while_statement
  229                    | do_statement
  230                    | for_statement
  231                    | foreach_statement

  232 while_statement: WHILE '(' boolean_expression ')' embedded_statement

  233 do_statement: DO embedded_statement WHILE '(' boolean_expression ')' ';'

  234 for_statement: FOR '(' ';' ';' ')' embedded_statement
  235              | FOR '(' for_initializer ';' ';' ')' embedded_statement
  236              | FOR '(' ';' for_condition ';' ')' embedded_statement
  237              | FOR '(' ';' ';' for_iterator ')' embedded_statement
  238              | FOR '(' for_initializer ';' for_condition ';' ')' embedded_statement
  239              | FOR '(' for_initializer ';' ';' for_iterator ')' embedded_statement
  240              | FOR '(' ';' for_condition ';' for_iterator ')' embedded_statement
  241              | FOR '(' for_initializer ';' for_condition ';' for_iterator ')' embedded_statement

  242 for_initializer: local_variable_declaration
  243                | statement_expression_list

  244 for_condition: boolean_expression

  245 for_iterator: statement_expression_list

  246 statement_expression_list: statement_expression
  247                          | statement_expression_list ',' statement_expression

  248 foreach_statement: FOREACH '(' local_variable_type identifier IN expression ')' embedded_statement

  249 jump_statement: break_statement
  250               | continue_statement
  251               | goto_statement
  252               | return_statement
  253               | throw_statement

  254 break_statement: BREAK ';'

  255 continue_statement: CONTINUE ';'

  256 goto_statement: GOTO identifier ';'
  257               | GOTO CASE constant_expression ';'
  258               | GOTO DEFAULT ';'

  259 return_statement: RETURN ';'
  260                 | RETURN expression ';'

  261 throw_statement: THROW ';'
  262                | THROW expression ';'

  263 try_statement: TRY block catch_clauses
  264              | TRY block finally_clause
  265              | TRY block catch_clauses finally_clause

  266 catch_clauses: general_catch_clause

  267 general_catch_clause: CATCH block

  268 finally_clause: FINALLY block

  269 using_statement: USING '(' resource_acquisition ')' embedded_statement

  270 resource_acquisition: local_variable_declaration
  271                     | expression

  272 compilation_unit: using_directives namespace_member_declarations
  273                 | namespace_member_declarations
  274                 | using_directives
  275                 | epsilon

  276 namespace_declaration: NAMESPACE qualified_identifier namespace_body
  277                      | NAMESPACE qualified_identifier namespace_body ';'

  278 qualified_identifier: identifier
  279                     | qualified_identifier '.' identifier

  280 namespace_body: '{' '}'
  281               | '{' namespace_member_declarations '}'
  282               | '{' using_directives '}'
  283               | '{' using_directives namespace_member_declarations '}'

  284 using_directives: using_directive
  285                 | using_directives using_directive

  286 using_directive: using_alias_directive
  287                | using_namespace_directive

  288 using_alias_directive: USING identifier '=' namespace_or_type_name ';'

  289 using_namespace_directive: USING namespace_name ';'

  290 namespace_member_declarations: namespace_member_declaration
  291                              | namespace_member_declarations namespace_member_declaration

  292 namespace_member_declaration: namespace_declaration
  293                             | type_declaration

  294 type_declaration: class_declaration
  295                 | struct_declaration

  296 qualified_alias_member: identifier DCLN identifier

  297 class_declaration: CLASS identifier class_body
  298                  | modifiers CLASS identifier class_body
  299                  | CLASS identifier class_base class_body
  300                  | CLASS identifier class_body ';'
  301                  | modifiers CLASS identifier class_base class_body
  302                  | modifiers CLASS identifier class_body ';'
  303                  | CLASS identifier class_base class_body ';'
  304                  | modifiers CLASS identifier class_base class_body ';'

  305 modifiers: modifier
  306          | modifiers modifier

  307 modifier: NEW
  308         | PUBLIC
  309         | PROTECTED
  310         | PRIVATE

  311 class_base: ':' class_type

  312 class_body: '{' '}'
  313           | '{' class_member_declarations '}'

  314 class_member_declarations: class_member_declaration
  315                          | class_member_declarations class_member_declaration

  316 class_member_declaration: constant_declaration
  317                         | field_declaration
  318                         | method_declaration
  319                         | constructor_declaration
  320                         | destructor_declaration
  321                         | type_declaration

  322 constant_declaration: CONST type constant_declarators ';'
  323                     | modifiers CONST type constant_declarators ';'

  324 constant_declarators: constant_declarator
  325                     | constant_declarators ',' constant_declarator

  326 constant_declarator: identifier '=' constant_expression

  327 field_declaration: type variable_declarators ';'
  328                  | modifiers type variable_declarators ';'

  329 variable_declarators: variable_declarator
  330                     | variable_declarators ',' variable_declarator

  331 variable_declarator: identifier
  332                    | identifier '=' variable_initializer

  333 variable_initializer: expression
  334                     | array_initializer

  335 method_declaration: method_header method_body

  336 method_header: type member_name '(' ')'
  337              | modifiers type member_name '(' ')'
  338              | type member_name '(' formal_parameter_list ')'
  339              | modifiers type member_name '(' formal_parameter_list ')'
  340              | VOID member_name '(' ')'
  341              | modifiers VOID member_name '(' ')'
  342              | VOID member_name '(' formal_parameter_list ')'
  343              | modifiers VOID member_name '(' formal_parameter_list ')'

  344 member_name: qualified_identifier

  345 method_body: block
  346            | ';'

  347 formal_parameter_list: fixed_parameters
  348                      | fixed_parameters ',' parameter_array
  349                      | parameter_array

  350 fixed_parameters: fixed_parameter
  351                 | fixed_parameters ',' fixed_parameter

  352 fixed_parameter: type identifier
  353                | parameter_modifier type identifier
  354                | type identifier default_argument
  355                | parameter_modifier type identifier default_argument

  356 default_argument: '=' expression

  357 parameter_modifier: REF
  358                   | THIS

  359 parameter_array: PARAMS array_type identifier

  360 constructor_declaration: constructor_declarator constructor_body
  361                        | modifiers constructor_declarator constructor_body

  362 constructor_declarator: identifier '(' ')'
  363                       | identifier '(' ')' constructor_initializer
  364                       | identifier '(' formal_parameter_list ')'
  365                       | identifier '(' formal_parameter_list ')' constructor_initializer

  366 constructor_initializer: ':' BASE '(' ')'
  367                        | ':' BASE '(' argument_list ')'
  368                        | ':' THIS '(' ')'
  369                        | ':' THIS '(' argument_list ')'

  370 constructor_body: block
  371                 | ';'

  372 destructor_declaration: '~' identifier '(' ')' destructor_body

  373 destructor_body: block
  374                | ';'

  375 struct_declaration: STRUCT identifier struct_body
  376                   | modifiers STRUCT identifier struct_body
  377                   | STRUCT identifier struct_body ';'
  378                   | modifiers STRUCT identifier struct_body ';'

  379 struct_body: '{' '}'
  380            | '{' struct_member_declarations '}'

  381 struct_member_declarations: struct_member_declaration
  382                           | struct_member_declarations struct_member_declaration

  383 struct_member_declaration: constant_declaration
  384                          | field_declaration
  385                          | method_declaration
  386                          | constructor_declaration
  387                          | type_declaration

  388 array_type: non_array_type rank_specifier

  389 rank_specifier: '[' ']'
  390               | '[' ',' ']'

  391 array_initializer: '{' '}'
  392                  | '{' variable_initializer_list '}'
  393                  | '{' variable_initializer_list ',' '}'

  394 variable_initializer_list: variable_initializer
  395                          | variable_initializer_list ',' variable_initializer

  396 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 121
'%' (37) 132
'&' (38) 148
'(' (40) 60 73 74 75 76 89 90 91 92 115 116 117 128 216 217 218 232
    233 234 235 236 237 238 239 240 241 248 269 336 337 338 339 340
    341 342 343 362 363 364 365 366 367 368 369 372
')' (41) 60 73 74 75 76 89 90 91 92 115 116 117 128 216 217 218 232
    233 234 235 236 237 238 239 240 241 248 269 336 337 338 339 340
    341 342 343 362 363 364 365 366 367 368 369 372
'*' (42) 130
'+' (43) 119 134
',' (44) 42 79 97 99 104 106 200 247 325 330 348 351 390 393 395
'-' (45) 120 135
'.' (46) 62 63 64 81 279
'/' (47) 131
':' (58) 45 160 194 226 227 311 366 367 368 369
';' (59) 193 195 196 206 233 234 235 236 237 238 239 240 241 254 255
    256 257 258 259 260 261 262 277 288 289 300 302 303 304 322 323
    327 328 346 371 374 377 378
'<' (60) 140
'=' (61) 100 162 202 288 326 332 356
'>' (62) 141
'?' (63) 36 160
'[' (91) 77 82 109 110 111 112 389 390
']' (93) 77 82 109 110 111 112 389 390
'^' (94) 150
'{' (123) 95 96 97 103 104 108 189 190 219 220 280 281 282 283 312
    313 379 380 391 392 393
'|' (124) 152
'}' (125) 95 96 97 103 104 108 189 190 219 220 280 281 282 283 312
    313 379 380 391 392 393
'~' (126) 122 372
error (256)
IFX (258)
ELSE (259) 217
BASE (260) 81 82 366 367
BOOL (261) 29 65
BREAK (262) 254
CASE (263) 226 257
CATCH (264) 267
CHAR (265) 35 66
CLASS (266) 297 298 299 300 301 302 303 304
CONST (267) 205 322 323
CONTINUE (268) 255
DEFAULT (269) 117 227 258
DO (270) 233
FALSE (271) 9
FINALLY (272) 268
FOR (273) 234 235 236 237 238 239 240 241
FOREACH (274) 248
GOTO (275) 256 257 258
IF (276) 216 217
IN (277) 248
INT (278) 31 67
LONG (279) 33 68
NAMESPACE (280) 276 277
NEW (281) 89 90 91 92 109 110 111 112 113 114 307
NULL_LIT (282) 15
OBJECT (283) 38 69
PARAMS (284) 359
PRIVATE (285) 310
PROTECTED (286) 309
PUBLIC (287) 308
REF (288) 47 357
RETURN (289) 259 260
STRING (290) 39 70
STRUCT (291) 375 376 377 378
SWITCH (292) 218
THIS (293) 80 358 368 369
THROW (294) 261 262
TRUE (295) 8
TRY (296) 263 264 265
TYPEOF (297) 115 116
UINT (298) 32 71
ULONG (299) 34 72
USING (300) 269 288 289
VOID (301) 116 340 341 342 343
WHILE (302) 232 233
ID (303) 2
DINT_LITERAL (304) 10
HDINT_LITERAL (305) 11
SIMPLE_ESC_SEQ (306)
CHAR_LITERAL (307) 12
REG_STR_LITERAL (308) 13
VER_STR_LITERAL (309) 14
DQM (310) 158
DCLN (311) 296
INCR (312) 87 126
DECR (313) 88 127
RAND (314) 154
ROR (315) 156
REQ (316) 145
RNE (317) 146
LE (318) 142
GE (319) 143
APLUS (320) 163
AMINUS (321) 164
AMULT (322) 165
ADIV (323) 166
AMOD (324) 167
AAND (325) 168
AOR (326) 169
ACARET (327) 170
LSHIFT (328) 137
LSHIFTEQ (329) 171
RSHIFT (330) 16
RSHIFTEQ (331) 17
WHERE (332)


Nonterminals, with rules where they appear

$accept (102)
    on left: 0
start (103)
    on left: 1, on right: 0
identifier (104)
    on left: 2, on right: 45 62 63 64 81 100 194 201 202 248 256 278
    279 288 296 297 298 299 300 301 302 303 304 326 331 332 352 353
    354 355 359 362 363 364 365 372 375 376 377 378
literal (105)
    on left: 3 4 5 6 7, on right: 50
boolean_literal (106)
    on left: 8 9, on right: 3
integer_literal (107)
    on left: 10 11, on right: 4
character_literal (108)
    on left: 12, on right: 5
string_literal (109)
    on left: 13 14, on right: 6
null_literal (110)
    on left: 15, on right: 7
right_shift (111)
    on left: 16, on right: 138
right_shift_assignment (112)
    on left: 17, on right: 172
namespace_name (113)
    on left: 18, on right: 289
type_name (114)
    on left: 19, on right: 24
namespace_or_type_name (115)
    on left: 20 21, on right: 18 19 288
type (116)
    on left: 22 23, on right: 89 90 91 92 115 117 128 198 205 322 323
    327 328 336 337 338 339 352 353 354 355
non_array_type (117)
    on left: 24 25 26, on right: 22 109 110 111 112 388
simple_type (118)
    on left: 27 28 29, on right: 25 37
numeric_type (119)
    on left: 30, on right: 27
integral_type (120)
    on left: 31 32 33 34 35, on right: 30
nullable_type (121)
    on left: 36, on right: 26
non_nullable_value_type (122)
    on left: 37, on right: 36
class_type (123)
    on left: 38 39, on right: 28 311
variable_reference (124)
    on left: 40, on right: 47
argument_list (125)
    on left: 41 42, on right: 42 74 76 90 92 367 369
argument (126)
    on left: 43 44, on right: 41 42
argument_name (127)
    on left: 45, on right: 44
argument_value (128)
    on left: 46 47, on right: 43 44
primary_expression (129)
    on left: 48 49, on right: 62 73 74 83
primary_no_array_creation_expression (130)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 48 77
parenthesized_expression (131)
    on left: 60, on right: 51
member_access (132)
    on left: 62 63 64, on right: 52
$@1 (133)
    on left: 61, on right: 62
predefined_type (134)
    on left: 65 66 67 68 69 70 71 72, on right: 63
invocation_expression (135)
    on left: 73 74 75 76, on right: 53 207
element_access (136)
    on left: 77, on right: 54
expression_list (137)
    on left: 78 79, on right: 77 79 82 108 109 110 111 112
this_access (138)
    on left: 80, on right: 55
base_access (139)
    on left: 81 82, on right: 56
postfix_expression (140)
    on left: 83 84 85 86, on right: 87 88 118
post_increment_expression (141)
    on left: 87, on right: 85 210
post_decrement_expression (142)
    on left: 88, on right: 86 211
object_creation_expression (143)
    on left: 89 90 91 92, on right: 57 208
object_or_collection_initializer (144)
    on left: 93 94, on right: 91 92 102
object_initializer (145)
    on left: 95 96 97, on right: 93
member_initializer_list (146)
    on left: 98 99, on right: 96 97 99
member_initializer (147)
    on left: 100, on right: 98 99
initializer_value (148)
    on left: 101 102, on right: 100
collection_initializer (149)
    on left: 103 104, on right: 94
element_initializer_list (150)
    on left: 105 106, on right: 103 104 106
element_initializer (151)
    on left: 107 108, on right: 105 106
array_creation_expression (152)
    on left: 109 110 111 112 113 114, on right: 49
typeof_expression (153)
    on left: 115 116, on right: 58
default_value_expression (154)
    on left: 117, on right: 59
unary_expression (155)
    on left: 118 119 120 121 122 123 124 125, on right: 119 120 121
    122 126 127 128 129 130 131 132 161
pre_increment_expression (156)
    on left: 126, on right: 123 212
pre_decrement_expression (157)
    on left: 127, on right: 124 213
cast_expression (158)
    on left: 128, on right: 125
multiplicative_expression (159)
    on left: 129 130 131 132, on right: 130 131 132 133 134 135
additive_expression (160)
    on left: 133 134 135, on right: 134 135 136 137 138
shift_expression (161)
    on left: 136 137 138, on right: 137 138 139 140 141 142 143
relational_expression (162)
    on left: 139 140 141 142 143, on right: 140 141 142 143 144 145
    146
equality_expression (163)
    on left: 144 145 146, on right: 145 146 147 148
and_expression (164)
    on left: 147 148, on right: 148 149 150
exclusive_or_expression (165)
    on left: 149 150, on right: 150 151 152
inclusive_or_expression (166)
    on left: 151 152, on right: 152 153 154
conditional_and_expression (167)
    on left: 153 154, on right: 154 155 156
conditional_or_expression (168)
    on left: 155 156, on right: 156 157 158
null_coalescing_expression (169)
    on left: 157 158, on right: 158 159 160
conditional_expression (170)
    on left: 159 160, on right: 175
assignment (171)
    on left: 161, on right: 174 209
assignment_operator (172)
    on left: 162 163 164 165 166 167 168 169 170 171 172, on right:
    161
expression (173)
    on left: 173 174, on right: 40 46 60 78 79 101 160 161 176 177
    203 218 248 260 262 271 333 356
non_assignment_expression (174)
    on left: 175, on right: 107 173
constant_expression (175)
    on left: 176, on right: 226 257 326
boolean_expression (176)
    on left: 177, on right: 216 217 232 233 244
statement (177)
    on left: 178 179 180, on right: 191 192 194
embedded_statement (178)
    on left: 181 182 183 184 185 186 187 188, on right: 180 216 217
    232 233 234 235 236 237 238 239 240 241 248 269
block (179)
    on left: 189 190, on right: 181 263 264 265 267 268 345 370 373
statement_list (180)
    on left: 191 192, on right: 190 192 223
empty_statement (181)
    on left: 193, on right: 182
labeled_statement (182)
    on left: 194, on right: 178
declaration_statement (183)
    on left: 195 196, on right: 179
local_variable_declaration (184)
    on left: 197, on right: 195 242 270
local_variable_type (185)
    on left: 198, on right: 197 248
local_variable_declarators (186)
    on left: 199 200, on right: 197 200
local_variable_declarator (187)
    on left: 201 202, on right: 199 200
local_variable_initializer (188)
    on left: 203 204, on right: 202
local_constant_declaration (189)
    on left: 205, on right: 196
expression_statement (190)
    on left: 206, on right: 183
statement_expression (191)
    on left: 207 208 209 210 211 212 213, on right: 206 246 247
selection_statement (192)
    on left: 214 215, on right: 184
if_statement (193)
    on left: 216 217, on right: 214
switch_statement (194)
    on left: 218, on right: 215
switch_block (195)
    on left: 219 220, on right: 218
switch_sections (196)
    on left: 221 222, on right: 220 222
switch_section (197)
    on left: 223, on right: 221 222
switch_labels (198)
    on left: 224 225, on right: 223 225
switch_label (199)
    on left: 226 227, on right: 224 225
iteration_statement (200)
    on left: 228 229 230 231, on right: 185
while_statement (201)
    on left: 232, on right: 228
do_statement (202)
    on left: 233, on right: 229
for_statement (203)
    on left: 234 235 236 237 238 239 240 241, on right: 230
for_initializer (204)
    on left: 242 243, on right: 235 238 239 241
for_condition (205)
    on left: 244, on right: 236 238 240 241
for_iterator (206)
    on left: 245, on right: 237 239 240 241
statement_expression_list (207)
    on left: 246 247, on right: 243 245 247
foreach_statement (208)
    on left: 248, on right: 231
jump_statement (209)
    on left: 249 250 251 252 253, on right: 186
break_statement (210)
    on left: 254, on right: 249
continue_statement (211)
    on left: 255, on right: 250
goto_statement (212)
    on left: 256 257 258, on right: 251
return_statement (213)
    on left: 259 260, on right: 252
throw_statement (214)
    on left: 261 262, on right: 253
try_statement (215)
    on left: 263 264 265, on right: 187
catch_clauses (216)
    on left: 266, on right: 263 265
general_catch_clause (217)
    on left: 267, on right: 266
finally_clause (218)
    on left: 268, on right: 264 265
using_statement (219)
    on left: 269, on right: 188
resource_acquisition (220)
    on left: 270 271, on right: 269
compilation_unit (221)
    on left: 272 273 274 275, on right: 1
namespace_declaration (222)
    on left: 276 277, on right: 292
qualified_identifier (223)
    on left: 278 279, on right: 20 75 76 84 276 277 279 344
namespace_body (224)
    on left: 280 281 282 283, on right: 276 277
using_directives (225)
    on left: 284 285, on right: 272 274 282 283 285
using_directive (226)
    on left: 286 287, on right: 284 285
using_alias_directive (227)
    on left: 288, on right: 286
using_namespace_directive (228)
    on left: 289, on right: 287
namespace_member_declarations (229)
    on left: 290 291, on right: 272 273 281 283 291
namespace_member_declaration (230)
    on left: 292 293, on right: 290 291
type_declaration (231)
    on left: 294 295, on right: 293 321 387
qualified_alias_member (232)
    on left: 296, on right: 21 64
class_declaration (233)
    on left: 297 298 299 300 301 302 303 304, on right: 294
modifiers (234)
    on left: 305 306, on right: 298 301 302 304 306 323 328 337 339
    341 343 361 376 378
modifier (235)
    on left: 307 308 309 310, on right: 305 306
class_base (236)
    on left: 311, on right: 299 301 303 304
class_body (237)
    on left: 312 313, on right: 297 298 299 300 301 302 303 304
class_member_declarations (238)
    on left: 314 315, on right: 313 315
class_member_declaration (239)
    on left: 316 317 318 319 320 321, on right: 314 315
constant_declaration (240)
    on left: 322 323, on right: 316 383
constant_declarators (241)
    on left: 324 325, on right: 205 322 323 325
constant_declarator (242)
    on left: 326, on right: 324 325
field_declaration (243)
    on left: 327 328, on right: 317 384
variable_declarators (244)
    on left: 329 330, on right: 327 328 330
variable_declarator (245)
    on left: 331 332, on right: 329 330
variable_initializer (246)
    on left: 333 334, on right: 332 394 395
method_declaration (247)
    on left: 335, on right: 318 385
method_header (248)
    on left: 336 337 338 339 340 341 342 343, on right: 335
member_name (249)
    on left: 344, on right: 336 337 338 339 340 341 342 343
method_body (250)
    on left: 345 346, on right: 335
formal_parameter_list (251)
    on left: 347 348 349, on right: 338 339 342 343 364 365
fixed_parameters (252)
    on left: 350 351, on right: 347 348 351
fixed_parameter (253)
    on left: 352 353 354 355, on right: 350 351
default_argument (254)
    on left: 356, on right: 354 355
parameter_modifier (255)
    on left: 357 358, on right: 353 355
parameter_array (256)
    on left: 359, on right: 348 349
constructor_declaration (257)
    on left: 360 361, on right: 319 386
constructor_declarator (258)
    on left: 362 363 364 365, on right: 360 361
constructor_initializer (259)
    on left: 366 367 368 369, on right: 363 365
constructor_body (260)
    on left: 370 371, on right: 360 361
destructor_declaration (261)
    on left: 372, on right: 320
destructor_body (262)
    on left: 373 374, on right: 372
struct_declaration (263)
    on left: 375 376 377 378, on right: 295
struct_body (264)
    on left: 379 380, on right: 375 376 377 378
struct_member_declarations (265)
    on left: 381 382, on right: 380 382
struct_member_declaration (266)
    on left: 383 384 385 386 387, on right: 381 382
array_type (267)
    on left: 388, on right: 23 113 359
rank_specifier (268)
    on left: 389 390, on right: 110 112 114 388
array_initializer (269)
    on left: 391 392 393, on right: 111 112 113 114 204 334
variable_initializer_list (270)
    on left: 394 395, on right: 392 393 395
epsilon (271)
    on left: 396, on right: 275


State 0

    0 $accept: . start $end

    CLASS      shift, and go to state 1
    NAMESPACE  shift, and go to state 2
    NEW        shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PUBLIC     shift, and go to state 6
    STRUCT     shift, and go to state 7
    USING      shift, and go to state 8

    $default  reduce using rule 396 (epsilon)

    start                          go to state 9
    compilation_unit               go to state 10
    namespace_declaration          go to state 11
    using_directives               go to state 12
    using_directive                go to state 13
    using_alias_directive          go to state 14
    using_namespace_directive      go to state 15
    namespace_member_declarations  go to state 16
    namespace_member_declaration   go to state 17
    type_declaration               go to state 18
    class_declaration              go to state 19
    modifiers                      go to state 20
    modifier                       go to state 21
    struct_declaration             go to state 22
    epsilon                        go to state 23


State 1

  297 class_declaration: CLASS . identifier class_body
  299                  | CLASS . identifier class_base class_body
  300                  | CLASS . identifier class_body ';'
  303                  | CLASS . identifier class_base class_body ';'

    ID  shift, and go to state 24

    identifier  go to state 25


State 2

  276 namespace_declaration: NAMESPACE . qualified_identifier namespace_body
  277                      | NAMESPACE . qualified_identifier namespace_body ';'

    ID  shift, and go to state 24

    identifier            go to state 26
    qualified_identifier  go to state 27


State 3

  307 modifier: NEW .

    $default  reduce using rule 307 (modifier)


State 4

  310 modifier: PRIVATE .

    $default  reduce using rule 310 (modifier)


State 5

  309 modifier: PROTECTED .

    $default  reduce using rule 309 (modifier)


State 6

  308 modifier: PUBLIC .

    $default  reduce using rule 308 (modifier)


State 7

  375 struct_declaration: STRUCT . identifier struct_body
  377                   | STRUCT . identifier struct_body ';'

    ID  shift, and go to state 24

    identifier  go to state 28


State 8

  288 using_alias_directive: USING . identifier '=' namespace_or_type_name ';'
  289 using_namespace_directive: USING . namespace_name ';'

    ID  shift, and go to state 24

    identifier              go to state 29
    namespace_name          go to state 30
    namespace_or_type_name  go to state 31
    qualified_identifier    go to state 32
    qualified_alias_member  go to state 33


State 9

    0 $accept: start . $end

    $end  shift, and go to state 34


State 10

    1 start: compilation_unit .

    $default  reduce using rule 1 (start)


State 11

  292 namespace_member_declaration: namespace_declaration .

    $default  reduce using rule 292 (namespace_member_declaration)


State 12

  272 compilation_unit: using_directives . namespace_member_declarations
  274                 | using_directives .
  285 using_directives: using_directives . using_directive

    CLASS      shift, and go to state 1
    NAMESPACE  shift, and go to state 2
    NEW        shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PUBLIC     shift, and go to state 6
    STRUCT     shift, and go to state 7
    USING      shift, and go to state 8

    $default  reduce using rule 274 (compilation_unit)
